"Back on track" https://www.udemy.com/course/spring-framework-5-beginner-to-guru/learn/lecture/7506264 (Abschnitt 11, Video 200):
1.)
Das RecipeRepository liefert als CrudRepository (implementiert von Spring Data JPA) mit der Methode findById() ein Java-'Optional' zurück.
2.)
In RecipeServiceImplementation wird die Methode findById() konkret implementiert (@Override): es wird erst getestet, ob ein Wert zurück geliefert wird und schließlich ein Recipe-Objekt aus dem Optional geholt und zurück gegeben.
3.)
Im RecipeController, der die Anfragen unter "/recipe/show/{id}" entgegen nimmt, wird dem Model ein Attribut hinzu gefügt: es wird ein "recipe" zurück geliefert mithilfe der Methode findById() des RecipeServiceImpl-Objekts.